add-dashboard-counts-feat

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,3 +111,14 @@ form.button_to {
 .text-danger {
   color: #f38792 !important;
 }
+
+.redirect-a{
+  color:white;
+  text-decoration: none;
+}
+
+.redirect-a:hover{
+  color:white;
+  text-decoration: none;
+  
+}
