--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -39,6 +39,8 @@
               <%= link_to category.name, category, class: "nav-link" %>
             </li>
             <% end %>
+
+            <li><%= link_to 'About Us', about_index_path, class: "nav-link" %></li>
           <%# </ul>
         </li> %>
       </ul>
